--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,18 +23,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    dataBinding {
-        enabled true
-    }
 }
 
 dependencies {
 
     implementation "androidx.appcompat:appcompat:$rootProject.androidXVersion"
     implementation "com.google.android.material:material:$rootProject.meterialVersion"
-    annotationProcessor rootProject.googleAutoServiceDependency
-    implementation rootProject.googleAutoServiceDependency
+    api project(":base")
 
-//    api相当于Java的public  implementation相当于Java的private
-    api project(":common")
 }
