--- a/webview/src/main/AndroidManifest.xml
+++ b/webview/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kuki.webview">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-    <application>
-        <activity android:name=".WebViewActivity"></activity>
+    <!--android:usesCleartextTraffic="true"允许使用HTTP-->
+    <application
+        android:usesCleartextTraffic="true">
+        <activity
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:name=".WebViewActivity"></activity>
     </application>
 
 </manifest>
