1、给WebView增加自定义的WebViewClient监听页面加载状态。增加自定义的WebChromeClient获取网页标题 2、新增LoadSir实现加载页、错误页面、空页面的管理 3、新增SmartfreshLayout实现下拉刷新

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -32,4 +32,10 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.androidXVersion"
     implementation "com.google.android.material:material:$rootProject.meterialVersion"
 
+    //LoadSir 是一个高效易用，低碳环保，扩展性良好的加载反馈页管理框架
+    api 'com.kingja.loadsir:loadsir:1.3.6'
+    //动画效果库
+    implementation 'com.airbnb.android:lottie:2.8.0'
+    //下拉刷新控件
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-7'
 }
