--- a/base/build.gradle
+++ b/base/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.8.0'
     //下拉刷新控件
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-7'
+
+    api 'com.google.code.gson:gson:2.8.2'
 }
