目标：网页打开原生Activity，原生Activity和WebView在不同进程 1、使用AIDL实现跨进程通讯

--- a/webview/src/main/AndroidManifest.xml
+++ b/webview/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:name=".WebViewActivity"
             android:process=":kukiwebview"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
+        <service android:name=".mainprocess.MainProcessService"></service>
     </application>
 
 </manifest>
