1、架构搞好后，再新增一个Activity进行跳转，只需要在html中增加方法即可

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.androidXVersion"
     implementation "com.google.android.material:material:$rootProject.meterialVersion"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
+    annotationProcessor rootProject.googleAutoServiceDependency
     implementation project(":webview")
 
 }
