1、增加主进程传给WebView进程的AIDL接口

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.androidXVersion"
     implementation "com.google.android.material:material:$rootProject.meterialVersion"
     api project(":base")
+    api 'org.greenrobot:eventbus:3.2.0'
 
 }
